--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">ppszm</a>.
+    Coded by <a href="https://github.com/ppszm">ppszm</a>.
   </div>
 </body>
 </html>
